<resources>
    <string name="app_name">testFinal</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuario</string>
    <string name="password">password</string>
    <string name="ingresar">Ingresar</string>
    <string name="button">Button</string>
    <string name="username">username</string>
    <string name="user">User</string>
    <string name="title_activity_send_money_test">SendMoneyTest</string>
    <string name="destinatario">Destinatario</string>
    <string name="cantidad">CANTIDAD</string>
    <string name="enviar_dinero">Enviar Dinero</string>
    <string name="usuario_iniciado_satisfactoriamente">Usuario iniciado satisfactoriamente</string>
</resources>
