<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="638dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="8dp">

        <EditText
            android:id="@+id/id_txt"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="number" />

        <EditText
            android:id="@+id/pass_txt"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="numberPassword" />

        <Button
            android:id="@+id/btn_ingresar"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/ingresar" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>